sample_files/cf_templates/vpc_cf_example.json
{
  "Description": "This template deploys a VPC, with a pair of public and private subnets spread across two Availability Zones. It deploys an internet gateway, with a default route on the public subnets. It deploys a pair of NAT gateways (one in each AZ), and default routes for them in the private subnets.",
  "Parameters": {
      "EnvironmentName": {
          "Description": "An environment name that is prefixed to resource names",
          "Type": "String"
      },
      "VpcCIDR": {
          "Description": "Please enter the IP range (CIDR notation) for this VPC",
          "Type": "String",
          "Default": "10.192.0.0/16"
      },
      "PublicSubnet1CIDR": {
          "Description": "Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone",
          "Type": "String",
          "Default": "10.192.10.0/24"
      },
      "PublicSubnet2CIDR": {
          "Description": "Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone",
          "Type": "String",
          "Default": "10.192.11.0/24"
      },
      "PrivateSubnet1CIDR": {
          "Description": "Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone",
          "Type": "String",
          "Default": "10.192.20.0/24"
      },
      "PrivateSubnet2CIDR": {
          "Description": "Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone",
          "Type": "String",
          "Default": "10.192.21.0/24"
      }
  },
  "Resources": {
      "VPC": {
          "Type": "AWS::EC2::VPC",
          "Properties": {
              "CidrBlock": {
                  "Ref": "VpcCIDR"
              },
              "EnableDnsSupport": true,
              "EnableDnsHostnames": true,
              "Tags": [
                  {
                      "Key": "Name",
                      "Value": {
                          "Ref": "EnvironmentName"
                      }
                  }
              ]
          },
          "Metadata": {
              "AWS::CloudFormation::Designer": {
                  "id": "a86fa45a-5b56-4870-b7b5-ad0e2c8baea5"
              }
          }
      },
      "InternetGateway": {
          "Type": "AWS::EC2::InternetGateway",
          "Properties": {
              "Tags": [
                  {
                      "Key": "Name",
                      "Value": {
                          "Ref": "EnvironmentName"
                      }
                  }
              ]
          },
          "Metadata": {
              "AWS::CloudFormation::Designer": {
                  "id": "4e199f91-b0df-4f56-991b-cf0db4cb61cc"
              }
          }
      },
      "InternetGatewayAttachment": {
          "Type": "AWS::EC2::VPCGatewayAttachment",
          "Properties": {
              "InternetGatewayId": {
                  "Ref": "InternetGateway"
              },
              "VpcId": {
                  "Ref": "VPC"
              }
          },
          "Metadata": {
              "AWS::CloudFormation::Designer": {
                  "id": "22514133-b850-451e-ad19-7453a4d24ad4"
              }
          }
      },
      "PublicSubnet1": {
          "Type": "AWS::EC2::Subnet",
          "Properties": {
              "VpcId": {
                  "Ref": "VPC"
              },
              "AvailabilityZone": {
                  "Fn::Select": [
                      0,
                      {
                          "Fn::GetAZs": ""
                      }
                  ]
              },
              "CidrBlock": {
                  "Ref": "PublicSubnet1CIDR"
              },
              "MapPublicIpOnLaunch": true,
              "Tags": [
                  {
                      "Key": "Name",
                      "Value": {
                          "Fn::Sub": "${EnvironmentName} Public Subnet (AZ1)"
                      }
                  }
              ]
          },
          "Metadata": {
              "AWS::CloudFormation::Designer": {
                  "id": "9daad0db-18d8-48f5-b6d2-7c33fb04942e"
              }
          }
      },
      "PublicSubnet2": {
          "Type": "AWS::EC2::Subnet",
          "Properties": {
              "VpcId": {
                  "Ref": "VPC"
              },
              "AvailabilityZone": {
                  "Fn::Select": [
                      1,
                      {
                          "Fn::GetAZs": ""
                      }
                  ]
              },
              "CidrBlock": {
                  "Ref": "PublicSubnet2CIDR"
              },
              "MapPublicIpOnLaunch": true,
              "Tags": [
                  {
                      "Key": "Name",
                      "Value": {
                          "Fn::Sub": "${EnvironmentName} Public Subnet (AZ2)"
                      }
                  }
              ]
          },
          "Metadata": {
              "AWS::CloudFormation::Designer": {
                  "id": "adba279e-4b82-4d39-b001-38d178b34010"
              }
          }
      },
      "PrivateSubnet1": {
          "Type": "AWS::EC2::Subnet",
          "Properties": {
              "VpcId": {
                  "Ref": "VPC"
              },
              "AvailabilityZone": {
                  "Fn::Select": [
                      0,
                      {
                          "Fn::GetAZs": ""
                      }
                  ]
              },
              "CidrBlock": {
                  "Ref": "PrivateSubnet1CIDR"
              },
              "MapPublicIpOnLaunch": false,
              "Tags": [
                  {
                      "Key": "Name",
                      "Value": {
                          "Fn::Sub": "${EnvironmentName} Private Subnet (AZ1)"
                      }
                  }
              ]
          },
          "Metadata": {
              "AWS::CloudFormation::Designer": {
                  "id": "1b66fc9a-6476-4919-8b6c-2bcc4ed9285b"
              }
          }
      },
      "PrivateSubnet2": {
          "Type": "AWS::EC2::Subnet",
          "Properties": {
              "VpcId": {
                  "Ref": "VPC"
              },
              "AvailabilityZone": {
                  "Fn::Select": [
                      1,
                      {
                          "Fn::GetAZs": ""
                      }
                  ]
              },
              "CidrBlock": {
                  "Ref": "PrivateSubnet2CIDR"
              },
              "MapPublicIpOnLaunch": false,
              "Tags": [
                  {
                      "Key": "Name",
                      "Value": {
                          "Fn::Sub": "${EnvironmentName} Private Subnet (AZ2)"
                      }
                  }
              ]
          },
          "Metadata": {
              "AWS::CloudFormation::Designer": {
                  "id": "8c09b350-1c81-4b0c-a3cd-d5435131a8df"
              }
          }
      },
      "NatGateway1EIP": {
          "Type": "AWS::EC2::EIP",
          "DependsOn": "InternetGatewayAttachment",
          "Properties": {
              "Domain": "vpc"
          },
          "Metadata": {
              "AWS::CloudFormation::Designer": {
                  "id": "a1a280bf-4436-4809-a3a6-a4c76bf8da18"
              }
          }
      },
      "NatGateway2EIP": {
          "Type": "AWS::EC2::EIP",
          "DependsOn": "InternetGatewayAttachment",
          "Properties": {
              "Domain": "vpc"
          },
          "Metadata": {
              "AWS::CloudFormation::Designer": {
                  "id": "9fa0d6de-587f-4de9-b43d-b3c970880dab"
              }
          }
      },
      "NatGateway1": {
          "Type": "AWS::EC2::NatGateway",
          "Properties": {
              "AllocationId": {
                  "Fn::GetAtt": [
                      "NatGateway1EIP",
                      "AllocationId"
                  ]
              },
              "SubnetId": {
                  "Ref": "PublicSubnet1"
              }
          },
          "Metadata": {
              "AWS::CloudFormation::Designer": {
                  "id": "f507fd1b-2907-48eb-a255-160632c5ce03"
              }
          }
      },
      "NatGateway2": {
          "Type": "AWS::EC2::NatGateway",
          "Properties": {
              "AllocationId": {
                  "Fn::GetAtt": [
                      "NatGateway2EIP",
                      "AllocationId"
                  ]
              },
              "SubnetId": {
                  "Ref": "PublicSubnet2"
              }
          },
          "Metadata": {
              "AWS::CloudFormation::Designer": {
                  "id": "f634afa4-d782-4027-9b04-f55b1811935d"
              }
          }
      },
      "PublicRouteTable": {
          "Type": "AWS::EC2::RouteTable",
          "Properties": {
              "VpcId": {
                  "Ref": "VPC"
              },
              "Tags": [
                  {
                      "Key": "Name",
                      "Value": {
                          "Fn::Sub": "${EnvironmentName} Public Routes"
                      }
                  }
              ]
          },
          "Metadata": {
              "AWS::CloudFormation::Designer": {
                  "id": "3cbd645d-d8e7-4762-a580-801ec1ddd8c6"
              }
          }
      },
      "DefaultPublicRoute": {
          "Type": "AWS::EC2::Route",
          "DependsOn": "InternetGatewayAttachment",
          "Properties": {
              "RouteTableId": {
                  "Ref": "PublicRouteTable"
              },
              "DestinationCidrBlock": "0.0.0.0/0",
              "GatewayId": {
                  "Ref": "InternetGateway"
              }
          },
          "Metadata": {
              "AWS::CloudFormation::Designer": {
                  "id": "00aa0692-6ca9-4a5c-b60c-25996e55f66b"
              }
          }
      },
      "PublicSubnet1RouteTableAssociation": {
          "Type": "AWS::EC2::SubnetRouteTableAssociation",
          "Properties": {
              "RouteTableId": {
                  "Ref": "PublicRouteTable"
              },
              "SubnetId": {
                  "Ref": "PublicSubnet1"
              }
          },
          "Metadata": {
              "AWS::CloudFormation::Designer": {
                  "id": "4dc139c4-f8f3-4ab7-9be6-77c7bfc4765c"
              }
          }
      },
      "PublicSubnet2RouteTableAssociation": {
          "Type": "AWS::EC2::SubnetRouteTableAssociation",
          "Properties": {
              "RouteTableId": {
                  "Ref": "PublicRouteTable"
              },
              "SubnetId": {
                  "Ref": "PublicSubnet2"
              }
          },
          "Metadata": {
              "AWS::CloudFormation::Designer": {
                  "id": "908894ff-4103-43bb-a217-58124a649783"
              }
          }
      },
      "PrivateRouteTable1": {
          "Type": "AWS::EC2::RouteTable",
          "Properties": {
              "VpcId": {
                  "Ref": "VPC"
              },
              "Tags": [
                  {
                      "Key": "Name",
                      "Value": {
                          "Fn::Sub": "${EnvironmentName} Private Routes (AZ1)"
                      }
                  }
              ]
          },
          "Metadata": {
              "AWS::CloudFormation::Designer": {
                  "id": "0adbbab0-cfb4-451f-b7e9-03f02de171dd"
              }
          }
      },
      "DefaultPrivateRoute1": {
          "Type": "AWS::EC2::Route",
          "Properties": {
              "RouteTableId": {
                  "Ref": "PrivateRouteTable1"
              },
              "DestinationCidrBlock": "0.0.0.0/0",
              "NatGatewayId": {
                  "Ref": "NatGateway1"
              }
          },
          "Metadata": {
              "AWS::CloudFormation::Designer": {
                  "id": "adc33178-7f94-4d30-9747-2613238e3a83"
              }
          }
      },
      "PrivateSubnet1RouteTableAssociation": {
          "Type": "AWS::EC2::SubnetRouteTableAssociation",
          "Properties": {
              "RouteTableId": {
                  "Ref": "PrivateRouteTable1"
              },
              "SubnetId": {
                  "Ref": "PrivateSubnet1"
              }
          },
          "Metadata": {
              "AWS::CloudFormation::Designer": {
                  "id": "d2fdf19a-bb0e-436b-bfe9-d9eca22da5d8"
              }
          }
      },
      "PrivateRouteTable2": {
          "Type": "AWS::EC2::RouteTable",
          "Properties": {
              "VpcId": {
                  "Ref": "VPC"
              },
              "Tags": [
                  {
                      "Key": "Name",
                      "Value": {
                          "Fn::Sub": "${EnvironmentName} Private Routes (AZ2)"
                      }
                  }
              ]
          },
          "Metadata": {
              "AWS::CloudFormation::Designer": {
                  "id": "9034fd96-1da6-4883-884c-789e42b582b5"
              }
          }
      },
      "DefaultPrivateRoute2": {
          "Type": "AWS::EC2::Route",
          "Properties": {
              "RouteTableId": {
                  "Ref": "PrivateRouteTable2"
              },
              "DestinationCidrBlock": "0.0.0.0/0",
              "NatGatewayId": {
                  "Ref": "NatGateway2"
              }
          },
          "Metadata": {
              "AWS::CloudFormation::Designer": {
                  "id": "b5a6b3b6-4bff-42d8-83bc-17895a252d96"
              }
          }
      },
      "PrivateSubnet2RouteTableAssociation": {
          "Type": "AWS::EC2::SubnetRouteTableAssociation",
          "Properties": {
              "RouteTableId": {
                  "Ref": "PrivateRouteTable2"
              },
              "SubnetId": {
                  "Ref": "PrivateSubnet2"
              }
          },
          "Metadata": {
              "AWS::CloudFormation::Designer": {
                  "id": "c99a3d3f-b360-4502-8fed-fffdbf84da54"
              }
          }
      },
      "NoIngressSecurityGroup": {
          "Type": "AWS::EC2::SecurityGroup",
          "Properties": {
              "GroupName": "no-ingress-sg",
              "GroupDescription": "Security group with no ingress rule",
              "VpcId": {
                  "Ref": "VPC"
              }
          },
          "Metadata": {
              "AWS::CloudFormation::Designer": {
                  "id": "e5b49844-5d24-4468-a329-f4913253af51"
              }
          }
      }
  },
  "Outputs": {
      "VPC": {
          "Description": "A reference to the created VPC",
          "Value": {
              "Ref": "VPC"
          }
      },
      "PublicSubnets": {
          "Description": "A list of the public subnets",
          "Value": {
              "Fn::Join": [
                  ",",
                  [
                      {
                          "Ref": "PublicSubnet1"
                      },
                      {
                          "Ref": "PublicSubnet2"
                      }
                  ]
              ]
          }
      },
      "PrivateSubnets": {
          "Description": "A list of the private subnets",
          "Value": {
              "Fn::Join": [
                  ",",
                  [
                      {
                          "Ref": "PrivateSubnet1"
                      },
                      {
                          "Ref": "PrivateSubnet2"
                      }
                  ]
              ]
          }
      },
      "PublicSubnet1": {
          "Description": "A reference to the public subnet in the 1st Availability Zone",
          "Value": {
              "Ref": "PublicSubnet1"
          }
      },
      "PublicSubnet2": {
          "Description": "A reference to the public subnet in the 2nd Availability Zone",
          "Value": {
              "Ref": "PublicSubnet2"
          }
      },
      "PrivateSubnet1": {
          "Description": "A reference to the private subnet in the 1st Availability Zone",
          "Value": {
              "Ref": "PrivateSubnet1"
          }
      },
      "PrivateSubnet2": {
          "Description": "A reference to the private subnet in the 2nd Availability Zone",
          "Value": {
              "Ref": "PrivateSubnet2"
          }
      },
      "NoIngressSecurityGroup": {
          "Description": "Security group with no ingress rule",
          "Value": {
              "Ref": "NoIngressSecurityGroup"
          }
      }
  },
  "Metadata": {
      "AWS::CloudFormation::Designer": {
          "4e199f91-b0df-4f56-991b-cf0db4cb61cc": {
              "size": {
                  "width": 60,
                  "height": 60
              },
              "position": {
                  "x": 60,
                  "y": 1020
              },
              "z": 1,
              "embeds": []
          },
          "a86fa45a-5b56-4870-b7b5-ad0e2c8baea5": {
              "size": {
                  "width": 960,
                  "height": 870
              },
              "position": {
                  "x": 60,
                  "y": 90
              },
              "z": 1,
              "embeds": [
                  "e5b49844-5d24-4468-a329-f4913253af51",
                  "9034fd96-1da6-4883-884c-789e42b582b5",
                  "0adbbab0-cfb4-451f-b7e9-03f02de171dd",
                  "3cbd645d-d8e7-4762-a580-801ec1ddd8c6",
                  "8c09b350-1c81-4b0c-a3cd-d5435131a8df",
                  "1b66fc9a-6476-4919-8b6c-2bcc4ed9285b",
                  "adba279e-4b82-4d39-b001-38d178b34010",
                  "9daad0db-18d8-48f5-b6d2-7c33fb04942e"
              ]
          },
          "e5b49844-5d24-4468-a329-f4913253af51": {
              "size": {
                  "width": 60,
                  "height": 60
              },
              "position": {
                  "x": 90,
                  "y": 750
              },
              "z": 2,
              "parent": "a86fa45a-5b56-4870-b7b5-ad0e2c8baea5",
              "embeds": [],
              "iscontainedinside": [
                  "a86fa45a-5b56-4870-b7b5-ad0e2c8baea5"
              ]
          },
          "9034fd96-1da6-4883-884c-789e42b582b5": {
              "size": {
                  "width": 240,
                  "height": 240
              },
              "position": {
                  "x": 690,
                  "y": 150
              },
              "z": 2,
              "parent": "a86fa45a-5b56-4870-b7b5-ad0e2c8baea5",
              "embeds": [
                  "b5a6b3b6-4bff-42d8-83bc-17895a252d96"
              ],
              "iscontainedinside": [
                  "a86fa45a-5b56-4870-b7b5-ad0e2c8baea5"
              ]
          },
          "0adbbab0-cfb4-451f-b7e9-03f02de171dd": {
              "size": {
                  "width": 240,
                  "height": 240
              },
              "position": {
                  "x": 390,
                  "y": 450
              },
              "z": 2,
              "parent": "a86fa45a-5b56-4870-b7b5-ad0e2c8baea5",
              "embeds": [
                  "adc33178-7f94-4d30-9747-2613238e3a83"
              ],
              "iscontainedinside": [
                  "a86fa45a-5b56-4870-b7b5-ad0e2c8baea5"
              ]
          },
          "3cbd645d-d8e7-4762-a580-801ec1ddd8c6": {
              "size": {
                  "width": 240,
                  "height": 240
              },
              "position": {
                  "x": 90,
                  "y": 450
              },
              "z": 2,
              "parent": "a86fa45a-5b56-4870-b7b5-ad0e2c8baea5",
              "embeds": [
                  "00aa0692-6ca9-4a5c-b60c-25996e55f66b"
              ],
              "iscontainedinside": [
                  "a86fa45a-5b56-4870-b7b5-ad0e2c8baea5"
              ]
          },
          "8c09b350-1c81-4b0c-a3cd-d5435131a8df": {
              "size": {
                  "width": 150,
                  "height": 150
              },
              "position": {
                  "x": 690,
                  "y": 660
              },
              "z": 2,
              "parent": "a86fa45a-5b56-4870-b7b5-ad0e2c8baea5",
              "embeds": [],
              "iscontainedinside": [
                  "a86fa45a-5b56-4870-b7b5-ad0e2c8baea5"
              ]
          },
          "c99a3d3f-b360-4502-8fed-fffdbf84da54": {
              "source": {
                  "id": "9034fd96-1da6-4883-884c-789e42b582b5"
              },
              "target": {
                  "id": "8c09b350-1c81-4b0c-a3cd-d5435131a8df"
              }
          },
          "1b66fc9a-6476-4919-8b6c-2bcc4ed9285b": {
              "size": {
                  "width": 150,
                  "height": 150
              },
              "position": {
                  "x": 690,
                  "y": 450
              },
              "z": 2,
              "parent": "a86fa45a-5b56-4870-b7b5-ad0e2c8baea5",
              "embeds": [],
              "iscontainedinside": [
                  "a86fa45a-5b56-4870-b7b5-ad0e2c8baea5"
              ]
          },
          "d2fdf19a-bb0e-436b-bfe9-d9eca22da5d8": {
              "source": {
                  "id": "0adbbab0-cfb4-451f-b7e9-03f02de171dd"
              },
              "target": {
                  "id": "1b66fc9a-6476-4919-8b6c-2bcc4ed9285b"
              }
          },
          "adba279e-4b82-4d39-b001-38d178b34010": {
              "size": {
                  "width": 240,
                  "height": 240
              },
              "position": {
                  "x": 390,
                  "y": 150
              },
              "z": 2,
              "parent": "a86fa45a-5b56-4870-b7b5-ad0e2c8baea5",
              "embeds": [
                  "f634afa4-d782-4027-9b04-f55b1811935d"
              ],
              "iscontainedinside": [
                  "a86fa45a-5b56-4870-b7b5-ad0e2c8baea5"
              ]
          },
          "908894ff-4103-43bb-a217-58124a649783": {
              "source": {
                  "id": "3cbd645d-d8e7-4762-a580-801ec1ddd8c6"
              },
              "target": {
                  "id": "adba279e-4b82-4d39-b001-38d178b34010"
              }
          },
          "9daad0db-18d8-48f5-b6d2-7c33fb04942e": {
              "size": {
                  "width": 240,
                  "height": 240
              },
              "position": {
                  "x": 90,
                  "y": 150
              },
              "z": 2,
              "parent": "a86fa45a-5b56-4870-b7b5-ad0e2c8baea5",
              "embeds": [
                  "f507fd1b-2907-48eb-a255-160632c5ce03"
              ],
              "iscontainedinside": [
                  "a86fa45a-5b56-4870-b7b5-ad0e2c8baea5"
              ]
          },
          "4dc139c4-f8f3-4ab7-9be6-77c7bfc4765c": {
              "source": {
                  "id": "3cbd645d-d8e7-4762-a580-801ec1ddd8c6"
              },
              "target": {
                  "id": "9daad0db-18d8-48f5-b6d2-7c33fb04942e"
              }
          },
          "22514133-b850-451e-ad19-7453a4d24ad4": {
              "source": {
                  "id": "a86fa45a-5b56-4870-b7b5-ad0e2c8baea5"
              },
              "target": {
                  "id": "4e199f91-b0df-4f56-991b-cf0db4cb61cc"
              }
          },
          "00aa0692-6ca9-4a5c-b60c-25996e55f66b": {
              "size": {
                  "width": 60,
                  "height": 60
              },
              "position": {
                  "x": 120,
                  "y": 510
              },
              "z": 3,
              "parent": "3cbd645d-d8e7-4762-a580-801ec1ddd8c6",
              "embeds": [],
              "isassociatedwith": [
                  "4e199f91-b0df-4f56-991b-cf0db4cb61cc"
              ],
              "iscontainedinside": [
                  "3cbd645d-d8e7-4762-a580-801ec1ddd8c6"
              ],
              "dependson": [
                  "22514133-b850-451e-ad19-7453a4d24ad4"
              ]
          },
          "9fa0d6de-587f-4de9-b43d-b3c970880dab": {
              "size": {
                  "width": 60,
                  "height": 60
              },
              "position": {
                  "x": 180,
                  "y": 1020
              },
              "z": 1,
              "embeds": [],
              "dependson": [
                  "22514133-b850-451e-ad19-7453a4d24ad4"
              ]
          },
          "f634afa4-d782-4027-9b04-f55b1811935d": {
              "size": {
                  "width": 60,
                  "height": 60
              },
              "position": {
                  "x": 420,
                  "y": 210
              },
              "z": 3,
              "parent": "adba279e-4b82-4d39-b001-38d178b34010",
              "embeds": [],
              "iscontainedinside": [
                  "adba279e-4b82-4d39-b001-38d178b34010"
              ]
          },
          "b5a6b3b6-4bff-42d8-83bc-17895a252d96": {
              "size": {
                  "width": 60,
                  "height": 60
              },
              "position": {
                  "x": 720,
                  "y": 210
              },
              "z": 3,
              "parent": "9034fd96-1da6-4883-884c-789e42b582b5",
              "embeds": [],
              "isassociatedwith": [
                  "f634afa4-d782-4027-9b04-f55b1811935d"
              ],
              "iscontainedinside": [
                  "9034fd96-1da6-4883-884c-789e42b582b5"
              ]
          },
          "a1a280bf-4436-4809-a3a6-a4c76bf8da18": {
              "size": {
                  "width": 60,
                  "height": 60
              },
              "position": {
                  "x": 300,
                  "y": 1020
              },
              "z": 1,
              "embeds": [],
              "dependson": [
                  "22514133-b850-451e-ad19-7453a4d24ad4"
              ]
          },
          "f507fd1b-2907-48eb-a255-160632c5ce03": {
              "size": {
                  "width": 60,
                  "height": 60
              },
              "position": {
                  "x": 120,
                  "y": 210
              },
              "z": 3,
              "parent": "9daad0db-18d8-48f5-b6d2-7c33fb04942e",
              "embeds": [],
              "iscontainedinside": [
                  "9daad0db-18d8-48f5-b6d2-7c33fb04942e"
              ]
          },
          "adc33178-7f94-4d30-9747-2613238e3a83": {
              "size": {
                  "width": 60,
                  "height": 60
              },
              "position": {
                  "x": 420,
                  "y": 510
              },
              "z": 3,
              "parent": "0adbbab0-cfb4-451f-b7e9-03f02de171dd",
              "embeds": [],
              "isassociatedwith": [
                  "f507fd1b-2907-48eb-a255-160632c5ce03"
              ],
              "iscontainedinside": [
                  "0adbbab0-cfb4-451f-b7e9-03f02de171dd"
              ]
          }
      }
  }
}
